# doci

./: .gitignore  LICENSE  README.md  toto.md
back/: .dockerignore  .env  .gcloudignore  .gitignore  Cargo.toml  Dockerfile
back/migrations/: 20220305094357_first_migration.down.sql  20220305094357_first_migration.up.sql
back/src/: main.rs  models.rs
back/src/errors/: mod.rs  original_error.rs
back/src/models/: mod.rs  query.rs  requests.rs  schemas.rs  utils.rs
back/src/users/: auth.rs  doc.rs  mod.rs
back/tests/: models_test.rs
front/: Dockerfile  package-lock.json  package.json  vue.config.js
front/nginx/: default.conf
front/src/: App.vue
front/src/assets/style/: markdown.css
front/src/components/: AppBar.vue  EditPage.vue  HelloWorld.vue  LoginForm.vue  NavigationBar.vue  SignUpForm.vue  ToolBar.vue  UserPage.vue
front/src/router/: index.ts
front/src/store/: index.ts
front/src/utils/: app-util.ts  auth-util.ts  hierarchy-utils.ts  login-util.ts  page-util.ts  url-util.ts
front/src/views/: DocView.vue  HomeView.vue  LoginView.vue  SignUpView.vue  UserView.vue
fs_python/: .gcloudignore  .gitignore  main.py  requirements.txt
fs_python/gcs/: test.py  util.py
tmp/front/src/: App.vue
