[package]
name = "back"
version = "0.1.0"
edition = "2021"
publish=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={ version = "1.16", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
dotenv = "0.15.0"
http = "0.2"
serde="1.0"
serde_json ="1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
axum = {version="0.4",features = ["tower-log"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest={ version = "0.11", features = ["json"] }